tests/fixtures/errors/e1301_extern_module_duplicate.mimz
// expect: E1301
extern module Pll { in clk_in: bit }
extern module Pll { in clk_in: bit }
module M { }
